--- a/Music Project/MainStoryboard.storyboard
+++ b/Music Project/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kp3-HJ-T8k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kp3-HJ-T8k">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -201,6 +201,9 @@
                                 <state key="normal" title="Guests">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="net-5k-n4h" kind="push" id="unr-4Q-4cF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -226,11 +229,41 @@
                         <outlet property="nextSongTitle" destination="brR-cu-oc1" id="u8Y-aq-MG2"/>
                         <outlet property="songArtist" destination="COU-IV-rix" id="phr-AO-A08"/>
                         <outlet property="songTitle" destination="krU-Ol-JEE" id="7qL-jD-jT8"/>
+                        <outlet property="viewList" destination="tbN-br-iKS" id="HeL-pk-Rfg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qet-1r-Jwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1160" y="542"/>
+        </scene>
+        <!--Table View Controller - Whose Who at the Zoo-->
+        <scene sceneID="yeT-Is-K3T">
+            <objects>
+                <tableViewController id="net-5k-n4h" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Rch-B4-ypZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="9Qr-X9-s8q">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Qr-X9-s8q" id="a2E-BX-JQD">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="net-5k-n4h" id="PfQ-Za-BgW"/>
+                            <outlet property="delegate" destination="net-5k-n4h" id="tzf-SR-CXh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Whose Who at the Zoo" id="WR8-oJ-yRO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1qw-Os-1cj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1586" y="542"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="V7C-IL-1u3">
@@ -570,6 +603,9 @@
                                 <state key="normal" title="Guests">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="net-5k-n4h" kind="push" id="zve-x4-ht0"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -582,6 +618,7 @@
                         <outlet property="nextSongTitle" destination="aKl-Ck-qLA" id="x9d-pb-6CT"/>
                         <outlet property="songArtist" destination="WEL-BJ-Jfe" id="IBq-uv-KTn"/>
                         <outlet property="songTitle" destination="uv0-XN-11Z" id="BzI-Di-KLZ"/>
+                        <outlet property="viewGuestList" destination="3FJ-dg-lwM" id="cXA-Wt-zX9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YvZ-43-s2z" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -650,5 +687,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="2QN-L3-u5o"/>
+        <segue reference="zve-x4-ht0"/>
     </inferredMetricsTieBreakers>
 </document>
